# open-event-server

./: .Pipfile  .bowerrc  .codeclimate.yml  .coveragerc  .deepsource.toml  .dockerignore  .editorconfig  .env  .env.example  .env.example.swp  .env_BACKUP_2957.example  .env_BASE_2957.example.swp  .env_LOCAL_2957.example.swp  .env_REMOTE_2957.example  .env_REMOTE_2957.example.swp  .flake8  .flake8.ini  .flaskenv  .git-blame-ignore-revs  .gitignore  .gitpod.yml  .hound.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  .yaydoc.yml  1  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.md~  CREDITS  Dockerfile  GCI.MD  HowtoDeploytoHeroku.md  HowtoDeploytoHeroku.txt  MIGRATE-FLASK2  Makefile  Pipfile  (+59 more)
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto_label.yml  dependabot.yml  no-response.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  dependabot-approve.yml  docker-hub-v3.yml  docker-hub.yml  dokku-deploy.yml.disabled  dredd.yml  issue-scripts.yml
.virtual/local/: bin  include  lib
_docs/: amazon-s3.md  api.md  database.md  import-export.md  roles.md
_includes/: analytics.html  disqus.html
_installation/: aws.md  basic.md  digital-ocean.md  gce-kubernetes.md  google.md  heroku.md  local.md  mac-os.md
_layouts/: default.html  doc.html  post.html
_sass/: style.scss
api/v1/: index.html  swagger.json
api/v2/: index.html  swagger.json
app/: __init__.py  asgi.py  base.py  instance.py
app/api/: .routes.py.swp  .video_stream.py.swp  __init__.py  access_codes.py  activities.py  admin_translations.py  attendees.py  auth.py  badge_field_forms.py  badge_forms.py  bootstrap.py  call_for_papers.py  celery_tasks.py  custom_form_options.py  custom_form_ticket.py  custom_form_translates.py  custom_forms.py  custom_placeholders.py  custom_system_roles.py  discount_codes.py  email_notifications.py  event_chat_messages.py  event_components.py  event_copy.py  (+81 more)
autodeploy/: README.md  auto_updater.py  command.py  config.yml  docker.py  git.py  main.py  server.py
charts/: Chart.yaml  requirements.yaml  values.yaml
css/: main.scss
custom_sessions/: admin.py  apps.py  models.py
custom_sys_roles/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
discount_code_tickets/: apps.py  models.py
discount_codes/: apps.py  models.py
docs/: AMAZON_S3.md  API.md  BOWER.md  DEPENDENCIES.md  DIGITAL_OCEAN.md  DOCKER.md  EVENT_CHECKLIST.md  HEROKU.md  HowtoDeploytoHeroku.md  IMPORT_EXPORT.md  INSTALLATION.md  INSTALLATION_AWS.md  INSTALLATION_DIGITALOCEAN.md  INSTALLATION_DIGITAL_OCEAN.md  INSTALLATION_DOCKER.md  INSTALLATION_GCE_KUBERNETES.md  INSTALLATION_GOOGLE.md  INSTALLATION_LOCAL.md  INSTALLATION_VAGRANT.md  INSTALLATION_macOS.md  LOGS.md  README.md  REDIS.md  ROLES.md  RUNNING.md  Roles  TESTING_DATABASE.md  TESTS.md
event_sub_topics/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
event_topics/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
event_types/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
events/: admin.py  apps.py  forms.py  models.py
groups/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
js/: theme.js  theme.min.js
kubernetes/: celery-deployment.yml  data-claim0-persistentvolumeclaim.json  data-deployment.json  deploy.sh  opev_redis-persistentvolumeclaim.json  opev_storage-persistentvolumeclaim.json  postgres-claim.yml  postgres-deployment.json  postgres-persistence.yml  postgres-pod.yml  postgres-service.json  postgres-service.yml  redis-deployment.json  redis-deployment.yml  redis-pv-claim.yml  redis-service.json  redis-service.yml  run.sh  web-deployment.json  web-deployment.yml  web-service.json  web-service.yml
microlocation/: apps.py  models.py
migrations/: alembic.ini  env.py  script.py.mako
notification_contents/: admin.py  apps.py  models.py
open_event/: __init__.py  admin.py  date_formatter.py  models.py
open_event_api/: asgi.py  models.py  permissions.py  settings.py  urls.py  wsgi.py
openjpeg-2.0.1/: AUTHORS  CHANGES  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  NEWS  OpenJPEGConfig.cmake  cmake_install.cmake  install_manifest.txt  libopenjp2.pc
panel_permissions/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
postgres-initdb.d/: create_db.sql
requirements/: common.txt  dev.txt  prod.txt  tests.txt
robot/: index.html  log.html  output.xml  report.html
roles/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
schema/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  open_event.public.xml  orphans.html  relationships.html  routines.html
scripts/: check_error.sh  container_start.sh  docker_run.sh  generate_session_tweet_csv.py  heroku.sh  init.sh  install.sh  l10n.sh  lint.sh  merge-pyi.sh  push_api_docs.sh  reschedule.py  run.sh  test_db.sh  test_multiple_heads.sh  upgrade.sh
services/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
session_types/: apps.py  models.py
sessions/: apps.py  models.py
static/: .gitignore
tests/: __init__.py  auth_helper.py  hook_main.py  object_mother.py  set_up.py  setup.py  setup_database.py  test.db  test_api.py  test_db_performance.py  test_event_functions.py  test_event_track.py  test_fb_oauth.py  test_file_upload_in_sessions.py  test_get_apis.py  test_get_session_by_id.py  test_get_speaker_by_id.py  test_google_oauth.py  test_guest_event_page.py  test_helper.py  test_login.py  test_microlocation.py  test_model_unicode.py  test_my_session.py  test_profile_img_upload.py  test_session.py  test_session_form.py  test_session_type.py  test_social_link.py  test_validations.py  utils.py
tickets/: apps.py  models.py
tracks/: apps.py  models.py  views.py
users/: admin.py  forms.py  models.py  tests.py
utils/: common.py  compat.py
video_channels/: admin.py  apps.py  models.py
video_streams/: apps.py  models.py  views.py
(+4569 files in other folders)
