[tool.black]
line-length = 90
target-version = ['py38']
skip-string-normalization = true
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.pylint.MAIN]
load-plugins = [ "pylint_flask_sqlalchemy", "pylint_flask" ]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "invalid-name",
]

[tool.pylint.CODE_STYLE]
max-line-length = 90

[tool.isort]
profile = "black"
line_length = 90
skip = '.venv/,migrations/,manage.py,instance.py,hook_main.py'
known_first_party = 'app'
known_third_party = 'flask'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pycln]
path = "app/"
exclude = "(migrations/|.venv/)"
all = true

[tool.poetry]
name = "open-event-server"
version = "1.19.1"
description = "Open Event APIs Server"
authors = ["Fossasia <office@fossasia.org>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pycparser = "^2.21"
flask = "^2.3.3"
flask-limiter = "^3.5.0"
flask-script = "^2.0.6"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.2"
flask-scrypt = "^0.1.3.6"
flask-jwt-extended = "^4.5.2"
flask-celeryext = "^0.5.0"
werkzeug = "^2.3.7"
omise = "^0.12.0"
requests-oauthlib = "^1.3.1"
icalendar = "^5.0.7"
requests = {extras = ["security"], version = "^2.31.0"}
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"
itsdangerous = "^2.1.2"
humanize = "^4.8.0"
celery = "^5.3.4"
redis = "^5.0.0"
apscheduler = "^3.10.4"
pillow = "^10.0.0"
gunicorn = "^21.2.0"
boto = "^2.49.0"
geoip2 = "^4.7.0"
sqlalchemy-continuum = "^1.4.0"
bleach = "^6.0.0"
stripe = "^6.4.0"
xhtml2pdf = "^0.2.11"
flask-caching = "^2.0.2"
forex-python = "^1.8"
pycryptodome = "^3.18.0"
oauth2 = "^1.9.0.post1"
qrcode = "^7.4.2"
python-magic = "^0.4.27"
python-dotenv = "^1.0.0"
python-geoip = "^1.2"
flask-cors = "^4.0.0"
python-pentabarf-xml = "^0.20"
python-geoip-geolite2 = "^2015.303"
pycountry = "^22.3.5"
pytz = "^2023.3.post1"
diff-match-patch = "^20230430"
blinker = "^1.6.2"
envparse = "^0.2.0"
flask-rest-jsonapi = "^0.31.2"
wtforms = {extras = ["email"], version = "^3.0.1"}
flask-admin = "^1.6.1"
google-compute-engine = "^2.8.13"
factory-boy = "^3.3.0"
sentry-sdk = {extras = ["flask"], version = "^1.31.0"}
healthcheck = "^1.3.3"
elasticsearch-dsl = "^8.9.0"
flask-redis = "^0.4.0"
sqlalchemy = "^2.0.20"
flask-elasticsearch = "^0.2.5"
paypalrestsdk = "^1.13.1"
eventlet = "^0.33.3"
gevent = "^23.9.1"
pyyaml = "^6.0.1"
sendgrid = "^6.10.0"
marshmallow = "^3.20.1"
marshmallow-jsonapi = "^0.24.0"
weasyprint = "^59.0"
flask-babel = "^3.1.0"
xmltodict = "^0.13.0"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
broadcaster = {extras = ["redis"], version = "^0.2.0"}
sqlalchemy-citext = "^1.8.0"
coolname = "^2.2.0"
python-slugify = "^8.0.1"
cryptography = "^41.0.3"
flask-migrate = "^4.0.5"
marrow-mailer = "^4.0.3"
marrow-util = "^1.2.3"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"
dnspython = "^2.4.2"

[tool.poetry.group.dev.dependencies]
nose = "^1.3.7"
pylint = "^2.17.5"
pep8 = "^1.7.1"
isort = "^5.12.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
pytype = "^2023.9.11"
pycln = "^2.2.2"
pyupgrade = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
