[tool.black]
line-length = 90
target-version = ['py38']
skip-string-normalization = true
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.pylint.MAIN]
load-plugins = [ "pylint_flask_sqlalchemy", "pylint_flask" ]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "invalid-name",
]

[tool.pylint.CODE_STYLE]
max-line-length = 90

[tool.isort]
profile = "black"
line_length = 90
skip = '.venv/,migrations/,manage.py,instance.py,hook_main.py'
known_first_party = 'app'
known_third_party = 'flask'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pycln]
path = "app/"
exclude = "(migrations/|.venv/)"
all = true

[tool.poetry]
name = "open-event-server"
version = "1.19.1"
description = "Open Event APIs Server"
authors = ["Fossasia <office@fossasia.org>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
pycparser = "2.21"
Flask = "1.1.2"
Flask-Limiter = "1.4"
Flask-Script = "2.0.6"
Flask-SQLAlchemy = "2.5.1"
Flask-Login = "0.6.2"
Flask-Scrypt = "0.1.3.6"
flask-jwt-extended = "3.25.0"
flask-celeryext = "0.4.3"
werkzeug = "2.0.3"
omise = "0.12.0"
requests-oauthlib = "1.3.1"
icalendar = "5.0.7"
requests = {version = "2.31.0", extras = ["security"]}
psycopg2-binary = "2.9.6"
SQLAlchemy-Utils = "0.41.1"
itsdangerous = "2.0.1"
humanize = "4.1.0"
celery = "5.3.1"
redis = "4.6.0"
apscheduler = "3.10.1"
pillow = "9.5.0"
gunicorn = "21.2.0"
boto = "2.49"
geoip2 = "4.7.0"
SQLAlchemy-Continuum = "1.3.15"
bleach = "4.1.0"
stripe = "5.5.0"
xhtml2pdf = "0.2.11"
flask-caching = "2.0.2"
forex-python = "1.8"
pycryptodome = "3.18.0"
oauth2 = "~1.9.0"
qrcode = "7.4.2"
python-magic = "0.4.27"
python-dotenv = "0.20.0"
python-geoip = "1.2"
flask-cors = "4.0.0"
python-pentabarf-xml = "0.20"
python-geoip-geolite2 = "2015.303"
pycountry = "22.3.5"
pytz = "2023.3"
diff-match-patch = "20230430"
blinker = "1.6.2"
envparse = "0.2"
flask-rest-jsonapi = {git = "https://github.com/fossasia/flask-rest-jsonapi.git", tag = "0.12.6.5"}
wtforms = {version = "2.3.3", extras = ["email"]}
flask-admin = "1.6.1"
google-compute-engine = "2.8.13"
factory_boy = "3.2.1"
sentry-sdk = {version = "1.28.1", extras = ["flask"]}
healthcheck = "1.3.3"
elasticsearch-dsl = "7.0.0"
flask-redis = "0.4"
SQLAlchemy = "1.3.23"
Flask-Elasticsearch = "0.2.5"
paypalrestsdk = "1.13.1"
eventlet = "0.33.3"
gevent = "22.10.1"
greenlet = "1.1.3.post0" # Required for gevent
pyyaml = "6.0.1"
sendgrid = "6.10.0"
marshmallow = "2.21.0"
marshmallow-jsonapi = "0.23.2"
WeasyPrint = "52.5"
Flask-Babel = "2.0.0"
xmltodict = "0.13.0"
# GraphQL support
graphene-sqlalchemy = "2.3.0"
flask-graphql = "2.0.1"
graphene-sqlalchemy-filter = "1.13.0"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
broadcaster = {extras = ["redis"], version = "^0.2.0"}
sqlalchemy-citext = "^1.8.0"
coolname = "^2.2.0"
python-slugify = "^8.0.1"
cryptography = "41.0.3"
Flask-Migrate = "2.7.0"
marrow-mailer = {git = "https://github.com/LexMachinaInc/mailer.git", rev = "develop"}
marrow-util = {git = "https://github.com/LexMachinaInc/util.git", rev = "develop"}
jinja2 = "<3"
markupsafe = "<2.1"
dnspython = "<3"

[tool.poetry.group.dev.dependencies]
nose = "1.3.7"
pylint = "2.17.4"
pep8 = "1.7.1"
isort = "5.12.0"
black = "23.7.0"
pre-commit = "3.3.2"
pytype = "2022.11.29"
pycln = "2.1.5"
pyupgrade = "3.8.0"
# For testing
coverage = "7.2.7"
dredd_hooks = "0.2"
pytest = "7.4.0"
pytest-cov = "4.1.0"
objproxies = "0.9.4"
pylint-flask-sqlalchemy = "^0.2.0"
pylint-flask = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
